syntax = "proto3";

import 'google/protobuf/empty.proto';

option java_multiple_files = true;
option java_package = 'com.example.grpc';
option java_outer_classname = 'ChatProto';

message SendMessageRequest {
  string message = 1;
}

message SendMessageResponse {  }

message GetMessagesStreamResponse {
  string message = 1;
  string username = 2;
}

service GeneralChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessagesStream(google.protobuf.Empty) returns (stream GetMessagesStreamResponse);
}

service AdminChatService {
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc GetMessagesStream(google.protobuf.Empty) returns (stream GetMessagesStreamResponse);
}